News UAT/force-app/main/default/objects/Customer_Task__c/Customer_Task__c.object-meta.xml
<CustomObject>
    <description>This object is for NewsXtend Customers who access My-Account community</description>
    <label>Customer Activity</label>
    <nameField>
        <displayFormat>CAN-{YYMMDD}-{0000}</displayFormat>
        <label>Customer Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Activities</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>