News UAT/force-app/main/default/objects/Customer_Task__c/fields/AccountID__c.field-meta.xml
<CustomField>
    <fullName>AccountID__c</fullName>
    <description>This field will capture the Account Id from the respective related records.</description>
    <formula>IF( Campaign_Order__c &lt;&gt; null,   Campaign_Order__r.Account__c  ,  IF( Product_Order__c &lt;&gt; null,  Product_Order__r.Account__c,  IF(  Social_Campaign__c &lt;&gt; null ,  Social_Campaign__r.Account__c, &#39;&#39;) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountID</label>
    <type>Text</type>
</CustomField>