News UAT/force-app/main/default/objects/Customer_Task__c/fields/Campaign_Order__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipName>Customer_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>