News UAT/force-app/main/default/objects/Customer_Task__c/fields/Container_Code_Head_Tag__c.field-meta.xml
<CustomField>
    <fullName>Container_Code_Head_Tag__c</fullName>
    <label>Container Code Head Tag</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>