News UAT/force-app/main/default/objects/Customer_Task__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <defaultValue>NOW() + $Setup.NXX2_CustomerActivitySettings__c.Number_Of_Days_To_Extend__c</defaultValue>
    <description>This field will capture the Due Date Entered by the User.</description>
    <label>Due Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>