News UAT/force-app/main/default/objects/Customer_Task__c/fields/Eligible_to_send_email__c.field-meta.xml
<CustomField>
    <fullName>Eligible_to_send_email__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This will control email flow</description>
    <label>Eligible to send email</label>
    <type>Checkbox</type>
</CustomField>