News UAT/force-app/main/default/objects/Customer_Task__c/fields/Last_Email_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Email_Send_Date__c</fullName>
    <description>This will contain the date and time when last email was send.</description>
    <label>Last Email Send Date</label>
    <type>DateTime</type>
</CustomField>