News UAT/force-app/main/default/objects/Customer_Task__c/fields/Last_Status_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Status_Change_Date__c</fullName>
    <description>This will store the date and time, when user updated the status</description>
    <label>Last Status Change Date</label>
    <type>DateTime</type>
</CustomField>