News UAT/force-app/main/default/objects/Customer_Task__c/fields/Number_of_Approval_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Approval_Email_Sent__c</fullName>
    <label>Number of Approval Email Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>