News UAT/force-app/main/default/objects/Customer_Task__c/fields/Number_of_email_sent__c.field-meta.xml
<CustomField>
    <fullName>Number_of_email_sent__c</fullName>
    <defaultValue>0</defaultValue>
    <description>How many emails have been sent do far</description>
    <label>Number of email sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>