News UAT/force-app/main/default/objects/Customer_Task__c/fields/Number_Of_Emails_To_Sent_For_Approvals__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Emails_To_Sent_For_Approvals__c</fullName>
    <description>This field will check, how many time emails need to check.</description>
    <formula>2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number Of Emails To Sent For Approvals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>