News UAT/force-app/main/default/objects/Customer_Task__c/fields/Product_Order__c.field-meta.xml
<CustomField>
    <fullName>Product_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This will contain the reference of Product Order for Approve Display Ad Proof Task</description>
    <label>Product Order</label>
    <referenceTo>Product_Order__c</referenceTo>
    <relationshipName>Customer_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>