News UAT/force-app/main/default/objects/Customer_Task__c/fields/Send_Approval_Emails__c.field-meta.xml
<CustomField>
    <fullName>Send_Approval_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this field will be used by time based workflow to send email</description>
    <label>Send Approval Emails</label>
    <type>Checkbox</type>
</CustomField>