News UAT/force-app/main/default/objects/Customer_Task__c/fields/Social_Ad__c.field-meta.xml
<CustomField>
    <fullName>Social_Ad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This relationship is to link Social Ad with the customer tasks to get &quot;Social Ad Tasks&quot;</description>
    <label>Social Ad</label>
    <referenceTo>SocialAd__c</referenceTo>
    <relationshipName>Customer_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>