News UAT/force-app/main/default/objects/Customer_Task__c/fields/Social_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Social_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This relationship to link social campaign to a customer task to get &quot;Campaign Tasks&quot;</description>
    <label>Social Campaign</label>
    <referenceTo>SocialCampaign__c</referenceTo>
    <relationshipName>Customer_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>