News UAT/force-app/main/default/objects/Customer_Task__c/fields/Status_Changed_By__c.field-meta.xml
<CustomField>
    <fullName>Status_Changed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This will Capture the user, who updated the status.</description>
    <label>Status Changed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>