News UAT/force-app/main/default/objects/Customer_Task__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>1.This will capture the Task Type.</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upload Creative Assets</fullName>
            </value>
            <value>
                <fullName>Place GTM on Website</fullName>
            </value>
            <value>
                <fullName>Extend Access to Google Analytics</fullName>
            </value>
            <value>
                <fullName>Approve and Review Your Display Ads</fullName>
            </value>
            <value>
                <fullName>Approve and Review Your Facebook Ads</fullName>
            </value>
            <value>
                <fullName>Grant News Xtend Facebook Access</fullName>
            </value>
            <value>
                <fullName>Approve and Review Your Landing Page</fullName>
            </value>
            <value>
                <fullName>Approve Display Ad Proof</fullName>
                <isActive>false</isActive>
                <label>Approve Display Ad Proof</label>
            </value>
            <value>
                <fullName>Approve Facebook Ads Proof</fullName>
                <isActive>false</isActive>
                <label>Approve Facebook Ads Proof</label>
            </value>
            <value>
                <fullName>Generic Task</fullName>
                <isActive>false</isActive>
                <label>Generic Task</label>
            </value>
            <value>
                <fullName>Google Tag Manager</fullName>
                <isActive>false</isActive>
                <label>Google Tag Manager</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>