News UAT/force-app/main/default/objects/Customer_Task__c/fields/X2_Portal_Task_Reference__c.field-meta.xml
<CustomField>
    <fullName>X2_Portal_Task_Reference__c</fullName>
    <description>This field will be used to hold the Google Data Store Entity (Task)  Key (Primary Key) field for Data migration.</description>
    <externalId>true</externalId>
    <label>X2 Portal Task Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>