News UAT/force-app/main/default/objects/Customer_Task__c/recordTypes/Campaign_Order_Customer_Activity.recordType-meta.xml
<RecordType>
    <fullName>Campaign_Order_Customer_Activity</fullName>
    <active>true</active>
    <description>Campaign Order Customer Activities</description>
    <label>Campaign Order Customer Activity</label>
</RecordType>