News UAT/force-app/main/default/objects/Customer_Task__c/recordTypes/Product_Order_Customer_Activity.recordType-meta.xml
<RecordType>
    <fullName>Product_Order_Customer_Activity</fullName>
    <active>true</active>
    <description>Product Order Customer Activity</description>
    <label>Product Order Customer Activity</label>
</RecordType>