News UAT/force-app/main/default/objects/Customer_Task__c/recordTypes/Proof_Customer_Activity.recordType-meta.xml
<RecordType>
    <fullName>Proof_Customer_Activity</fullName>
    <active>true</active>
    <description>Proof Customer Activity</description>
    <label>Proof Customer Activity</label>
</RecordType>